--- a/_i18n_xliff/UnitedPizzaHelper Localizations/de.xcloc/Localized Contents/de.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/de.xcloc/Localized Contents/de.xliff
@@ -1369,6 +1369,11 @@ Hinweis: Auch wenn "Hohe Zuverlässigkeit" angezeigt wird, liegen die endgültig
         <target state="translated">Eleganz</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:talentElysium" xml:space="preserve">
+        <source>Elysium</source>
+        <target state="translated">Elysiums</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:talentEquity" xml:space="preserve">
         <source>Equity</source>
         <target state="translated">Fairness</target>
@@ -1404,6 +1409,11 @@ Hinweis: Auch wenn "Hohe Zuverlässigkeit" angezeigt wird, liegen die endgültig
         <target state="translated">Lichts</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:talentMoonlight" xml:space="preserve">
+        <source>Moonlight</source>
+        <target state="translated">Mondlichts</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:talentOrder" xml:space="preserve">
         <source>Order</source>
         <target state="translated">Ordnung</target>
@@ -1429,6 +1439,11 @@ Hinweis: Auch wenn "Hohe Zuverlässigkeit" angezeigt wird, liegen die endgültig
         <target state="translated">Vergänglichkeit</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:talentVagrancy" xml:space="preserve">
+        <source>Vagrancy</source>
+        <target state="translated">Wanderschaft</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponAerosiderite" xml:space="preserve">
         <source>Aerosiderite</source>
         <target state="translated">Aerosiderit</target>
@@ -1437,6 +1452,11 @@ Hinweis: Auch wenn "Hohe Zuverlässigkeit" angezeigt wird, liegen die endgültig
       <trans-unit id="asset.dailyMaterial:weaponAncientChord" xml:space="preserve">
         <source>Ancient Chord</source>
         <target state="translated">Serenade</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="asset.dailyMaterial:weaponArtfulDevice" xml:space="preserve">
+        <source>Artful Device</source>
+        <target state="translated">Raffinierten Geheimgeräte</target>
         <note/>
       </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponBorealWolf" xml:space="preserve">
@@ -1464,6 +1484,11 @@ Hinweis: Auch wenn "Hohe Zuverlässigkeit" angezeigt wird, liegen die endgültig
         <target state="translated">Nebelschleiers</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:weaponFarNorthScions" xml:space="preserve">
+        <source>Far-North Scions</source>
+        <target state="translated">Nachkommen des Hohen Nordens</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponGladiator" xml:space="preserve">
         <source>Gladiator</source>
         <target state="translated">Löwenzahnkriegers</target>
@@ -1477,6 +1502,11 @@ Hinweis: Auch wenn "Hohe Zuverlässigkeit" angezeigt wird, liegen die endgültig
       <trans-unit id="asset.dailyMaterial:weaponKijinMask" xml:space="preserve">
         <source>Mask</source>
         <target state="translated">Maske</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="asset.dailyMaterial:weaponLongNightFlint" xml:space="preserve">
+        <source>Long Night Flint</source>
+        <target state="translated">Nachtfeuers</target>
         <note/>
       </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponNarukami" xml:space="preserve">
