--- a/_i18n_xliff/UnitedPizzaHelper Localizations/fil.xcloc/Localized Contents/fil.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/fil.xcloc/Localized Contents/fil.xliff
@@ -1369,6 +1369,11 @@ Tandaan: Kahit na lumabas ang "Mataas na tiwala", ang huling karapatan sa pagbib
         <target state="translated">Kariktan</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:talentElysium" xml:space="preserve">
+        <source>Elysium</source>
+        <target state="translated">Elysium</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:talentEquity" xml:space="preserve">
         <source>Equity</source>
         <target state="translated">Pagkakapantay-pantay</target>
@@ -1404,6 +1409,11 @@ Tandaan: Kahit na lumabas ang "Mataas na tiwala", ang huling karapatan sa pagbib
         <target state="translated">Liwanag</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:talentMoonlight" xml:space="preserve">
+        <source>Moonlight</source>
+        <target state="translated">Moonlight</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:talentOrder" xml:space="preserve">
         <source>Order</source>
         <target state="translated">Order</target>
@@ -1429,6 +1439,11 @@ Tandaan: Kahit na lumabas ang "Mataas na tiwala", ang huling karapatan sa pagbib
         <target state="translated">Pagka-madalian</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:talentVagrancy" xml:space="preserve">
+        <source>Vagrancy</source>
+        <target state="translated">Vagrancy</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponAerosiderite" xml:space="preserve">
         <source>Aerosiderite</source>
         <target state="translated">Aerosiderite</target>
@@ -1437,6 +1452,11 @@ Tandaan: Kahit na lumabas ang "Mataas na tiwala", ang huling karapatan sa pagbib
       <trans-unit id="asset.dailyMaterial:weaponAncientChord" xml:space="preserve">
         <source>Ancient Chord</source>
         <target state="translated">Sinaunang Kordyon</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="asset.dailyMaterial:weaponArtfulDevice" xml:space="preserve">
+        <source>Artful Device</source>
+        <target state="translated">Artful Device</target>
         <note/>
       </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponBorealWolf" xml:space="preserve">
@@ -1464,6 +1484,11 @@ Tandaan: Kahit na lumabas ang "Mataas na tiwala", ang huling karapatan sa pagbib
         <target state="translated">Kinukubli ng Ulap</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:weaponFarNorthScions" xml:space="preserve">
+        <source>Far-North Scions</source>
+        <target state="translated">Far-North Scions</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponGladiator" xml:space="preserve">
         <source>Gladiator</source>
         <target state="translated">Mandirigma</target>
@@ -1477,6 +1502,11 @@ Tandaan: Kahit na lumabas ang "Mataas na tiwala", ang huling karapatan sa pagbib
       <trans-unit id="asset.dailyMaterial:weaponKijinMask" xml:space="preserve">
         <source>Mask</source>
         <target state="translated">Maskara</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="asset.dailyMaterial:weaponLongNightFlint" xml:space="preserve">
+        <source>Long Night Flint</source>
+        <target state="translated">Long Night Flint</target>
         <note/>
       </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponNarukami" xml:space="preserve">
