--- a/_i18n_xliff/UnitedPizzaHelper Localizations/vi.xcloc/Localized Contents/vi.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/vi.xcloc/Localized Contents/vi.xliff
@@ -1369,6 +1369,11 @@ Lưu ý: Ngay cả khi xuất hiện "Độ tin cậy cao", quyền giải thíc
         <target state="translated">Nhã Nhặn</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:talentElysium" xml:space="preserve">
+        <source>Elysium</source>
+        <target state="translated">Lạc Viên</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:talentEquity" xml:space="preserve">
         <source>Equity</source>
         <target state="translated">Công Bằng</target>
@@ -1404,6 +1409,11 @@ Lưu ý: Ngay cả khi xuất hiện "Độ tin cậy cao", quyền giải thíc
         <target state="translated">Ánh Sáng</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:talentMoonlight" xml:space="preserve">
+        <source>Moonlight</source>
+        <target state="translated">Ánh Trăng</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:talentOrder" xml:space="preserve">
         <source>Order</source>
         <target state="translated">Trật Tự</target>
@@ -1429,6 +1439,11 @@ Lưu ý: Ngay cả khi xuất hiện "Độ tin cậy cao", quyền giải thíc
         <target state="translated">Phù Thế</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:talentVagrancy" xml:space="preserve">
+        <source>Vagrancy</source>
+        <target state="translated">Lang Bạt</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponAerosiderite" xml:space="preserve">
         <source>Aerosiderite</source>
         <target state="translated">Một Góc Thiên Thạch Đen</target>
@@ -1437,6 +1452,11 @@ Lưu ý: Ngay cả khi xuất hiện "Độ tin cậy cao", quyền giải thíc
       <trans-unit id="asset.dailyMaterial:weaponAncientChord" xml:space="preserve">
         <source>Ancient Chord</source>
         <target state="translated">Cung Đàn Cổ Xưa</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="asset.dailyMaterial:weaponArtfulDevice" xml:space="preserve">
+        <source>Artful Device</source>
+        <target state="translated">Khí Cụ Kỳ Diệu</target>
         <note/>
       </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponBorealWolf" xml:space="preserve">
@@ -1464,6 +1484,11 @@ Lưu ý: Ngay cả khi xuất hiện "Độ tin cậy cao", quyền giải thíc
         <target state="translated">Kim Đơn Biển Sương Mù</target>
         <note/>
       </trans-unit>
+      <trans-unit id="asset.dailyMaterial:weaponFarNorthScions" xml:space="preserve">
+        <source>Far-North Scions</source>
+        <target state="translated">Của Hậu Duệ Cực Bắc</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponGladiator" xml:space="preserve">
         <source>Gladiator</source>
         <target state="translated">Lí Tưởng Của Đấu Sĩ Nanh Sư Tử</target>
@@ -1477,6 +1502,11 @@ Lưu ý: Ngay cả khi xuất hiện "Độ tin cậy cao", quyền giải thíc
       <trans-unit id="asset.dailyMaterial:weaponKijinMask" xml:space="preserve">
         <source>Mask</source>
         <target state="translated">Nanh Cọp Của Gekiga</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="asset.dailyMaterial:weaponLongNightFlint" xml:space="preserve">
+        <source>Long Night Flint</source>
+        <target state="translated">Ngọn Lửa Đêm Dài</target>
         <note/>
       </trans-unit>
       <trans-unit id="asset.dailyMaterial:weaponNarukami" xml:space="preserve">
